Skriver om AregMock til å bruke ny personRepo.